<resources>
    <string name="app_name">Trello Plus</string>
    <string name="hello">Hello!</string>
    <string name="request_of_token"> "We need to know your token to work with your Trello account. Please grant the access and copy your token, to paste in the field below"</string>
    <string name="grant_access">Grant Access</string>
    <string name="token">Token</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="url">Url</string>
    <string name="id">Id</string>
    <string name="generic_webservice_error">An error occurred, please try again later</string>
    <string name="column_id">Column id</string>
    <string name="in_list">in list</string>
    <string name="labels">Labels</string>
    <string name="save">Save</string>
    <string name="saved">Saved</string>
    <string name="card">Card</string>
    <string name="create">Create</string>
    <string name="description">Description</string>
    <string name="card_name">Card name</string>
    <string name="delete">Delete</string>
    <string name="deleted">Deleted</string>
    <string name="description_hint">Description of the card</string>
    <string name="three_dots">…</string>
    <string name="Boards">Boards</string>
    <string name="share">Share</string>
    <string name="comments">Comments</string>
    <string name="add_comment">Add comment</string>
    <string name="at">at</string>
    <string name="checklist">Checklist</string>
    <string name="hide_done">Hide done</string>
    <string name="yes">Yes</string>
    <string name="labels_dots">Labels…</string>
    <string name="delete_dots">Delete…</string>
    <string name="delete_checklist">Delete checklist?</string>
    <string name="delete_checklist_message">Deleting a checklist is permanent and there is no way to get it back.</string>
    <string name="cancel">Cancel</string>
    <string name="date_of_completion">Date of completion</string>
    <string name="due_date">Due date</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="card_members">Card members</string>
    <string name="members_dots">Members…</string>
    <string name="add_item">Add item</string>
    <string name="Add_checkList">Add checkList</string>
    <string name="Checklist">Checklist</string>
</resources>
